--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,8 @@ body {
   padding-bottom: 70px;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
 
   h1,
   h2,
