--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -720,6 +720,16 @@ footer.sticky-bottom {
 
 // Publications
 
+button.publication-filter-btn {
+  border-radius: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  margin-left: 0;
+  text-transform: unset !important;
+}
+
 .publications {
   margin-top: 2rem;
 
