updated research statements

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -58,8 +58,8 @@ layout: default
 
     <!-- Selected papers -->
     {% if page.selected_papers %}
-      <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Papers</a>
+      <h2 id="papers-section">
+        <a href="{{ '/papers/' | relative_url }}" style="color: inherit">Papers</a>
       </h2>
       <!-- Begin: filter buttons -->
       <div class="container mt-4 mb-4">
